컴포넌트 추가하기
- reading progress
- 댓글 giscus

--- a/posts/1200.mdx
+++ b/posts/1200.mdx
@@ -1,6 +1,6 @@
 ---
 title: 제2절 금융감독의 구분과 기본 형태
-description: Steps to help you get started with Next.js MDX Blog
+description: 금융감독개론
 date: 2023-09-16
 ---
 
