--- a/posts/1300.mdx
+++ b/posts/1300.mdx
@@ -1,6 +1,6 @@
 ---
 title: 제3절 우리나라의 금융감독시스템
-description: Steps to help you get started with Next.js MDX Blog
+description: 금융감독개론
 date: 2023-09-16
 ---
 
