--- a/posts/1100.mdx
+++ b/posts/1100.mdx
@@ -1,6 +1,6 @@
 ---
 title: 제1절 금융감독의 개념과 필요성
-description: Steps to help you get started with Next.js MDX Blog
+description: 금융감독개론
 date: 2023-09-16
 ---
 
