--- a/posts/design_pattern_02.mdx
+++ b/posts/design_pattern_02.mdx
@@ -51,21 +51,64 @@ date: 2024-06-17
 - 구성요소의 클라이언트는 데코레이터의 존재를 알 수 없습니다. (클라이언트가 구성요소의 구체적인 형식에 의존하는 경우는 예외입니다.)
 - 데코레이터 패턴을 사용하면 자잘한 객체가 매우 많이 추가될 수가 있고, 코드가 필요 이상으로 복잡해집니다. 
 
-## 팩토리 패턴 
-> new -> 구상\
-> new를 사용하면 구상 클래스의 인스턴스가 만들어집니다.  
+## 팩토리 메서드 패턴 
+- 팩토리 메서드 패턴에서는 객체를 생성할 때 필요한 인터페이스(유연성 확장성)를 만듭니다. 어떤 클래스의 인스턴스를 만들지는 서브클래스에서 결정합니다. 팩토리 메서드 패턴을 이용하면 클래스 인스턴스 만드는 일을 서브클래스에게 맡기게 됩니다 (바뀌는 부분을 캡슐화 하기 )
+- 구상형식의 인스턴스를 만드는 작업을 캡슐화 (서브클래서에서 객체를 만들기)
+  - Creator 추상클래스에서 객체를 만드는 메서드(팩토리 메서드용 인터페이스) 제공
+  - Creator 추상클래스에 구현되어 있는 다른 메서드는 팩토리 메서드에 의해 생산된 제품으로 필요한 작업 처리.
+  - 실제 팩토리 메서드를 구현하고 제품 (객체 인스턴스)을 만드는 일은 서브클래스에서 함. 
+  - "팩토리 메서드 패턴에서는 어떤 클래스의 인스턴스를 만들지를 서브클래스에서 결정한다." => 사용하는 서브클래스에 따라 생산되는 객체 인스턴스가 결정.
 
-인터페이스에 맞춰 코딩하면 시스템에서 일어날 수 있는 여러 변화에 대응할 수 있음.
-인터페이스를 바탕으로 만들어진 코드는 어떤 클래스든 특정 인터페이스만 구현하면 사용할 수 있기 때문.(다형성)
-
-구상클래스를 많이 사용하면 새로운 구상클래스가 추가될때마다 코드를 고쳐야 함.(변경에 닫혀있는 코드)
-
-바뀌는 부분과 바뀌지 않는 부분을 구분하기 
-- 바뀌는 부분 : 캡슐화 
-
-팩토리 :  객체 생성을 처리하는 클래스 =>  생성자만 만들어 줌. 
 <Image
-  src={`/images/dp/dp_02_simpleFactory.png`}
-  width={1440}
-  height={960}
+src={`/images/dp/dp_02_factoryMethod.png`}
+width={1440}
+height={960}
 />
+- 제품을 생산하는 부분과 사용하는 부분을 분리 (느슨한 결합)
+
+## 추상 팩토리 패턴 
+<Image
+src={`/images/dp/dp_02_abstractFactory.png`}
+width={1440}
+height={960}
+/>
+추상 팩토리 패턴은 구상 클래스에 의존하지 않고도 서로 연관되거나 의존적인 객체로 이루어진 제품군을 생산하는 인터페이스를 제공. 구상클래스는 서브 클래스에서 만듬. 
+
+## 싱글턴 패턴
+<Image
+src={`/images/dp/dp_02_singleton01.png`}
+width={1440}
+height={960}
+/>
+- 클래스 인스턴스를 하나만 만들고, 그 인스턴스로의 전역 접근을 제공함.
+- 생성자를 private으로 저장 => 단 한개만 만들기 
+- 필요할 때 인스턴스를 달라고 요청 : getInstance() 정적메서드 
+- ex. 연결 풀이나 스레드 풀가 같은 자원 풀 관리에 사용 
+- enum을 대체하면 간단하게 싱글턴 패턴을 구현할 수 있다.
+```java
+package headfirst.designpatterns.singleton.enumS;
+
+public enum Singleton {
+	UNIQUE_INSTANCE;
+ 
+	// other useful fields here
+
+	// other useful methods here
+	public String getDescription() {
+		return "I'm a thread safe Singleton!";
+	}
+}
+```
+
+```java
+package headfirst.designpatterns.singleton.enumS;
+
+public class SingletonClient {
+	public static void main(String[] args) {
+		Singleton singleton = Singleton.UNIQUE_INSTANCE;
+		System.out.println(singleton.getDescription());
+	}
+}
+
+```
+
